--- a/style.css
+++ b/style.css
@@ -2,27 +2,23 @@
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-style: normal;
-  }  
+  } 
+  
+html{
+    height: 100%;
+}
 body{
     display: flex;
     justify-content: center;
     flex-wrap: nowrap;
-    margin: 0%;
-    padding: 0%;
     height: 100%;
 }
-
-html{
-    height: 100%;
-}
-
 .area1{
     background-color: #6962AD;
     height: 100%;
     width: 30%;
     height: 100%;
 }
-
 .area2{
     display: flex;
     flex-direction: column;
@@ -41,15 +37,14 @@ html{
     height: 100%;
 }
 
-.textoEncrip{
-    width: 90%;
-    height: 60%;
-    background-color: white;
-    text-align: center;
-    margin-left: 4%;
-    padding-top: 8%;
-    padding-bottom: 0%;
-  
+.area3 h2{
+    margin-left: 15%;
+ } 
+
+ .parrafo{
+    padding-left: 5%;
+    padding-top: 5%;
+    color: whitesmoke;
 }
 
 .textNormal{
@@ -61,9 +56,19 @@ html{
     background-color: #9F70FD;
     color: #EEEEEE;
     font-size: 20px;
-
-
 }
+
+.textoEncrip{
+    width: 90%;
+    height: 60%;
+    background-color: white;
+    text-align: center;
+    margin-left: 4%;
+    padding-top: 8%;
+    padding-bottom: 0%;
+  }
+
+/*Botones*/
 
 .botones{
     display: flex;
@@ -84,19 +89,6 @@ html{
     font-style: normal;
 }
 
-
-.parrafo{
-    padding-left: 5%;
-    padding-top: 5%;
-    color: whitesmoke;
-}
-
-.img1{
-    width: 21%;
-    height: auto;
-    padding: 15%;
-}
-
 .botonEncriptar{
     width: 40%;
     height:200% ;
@@ -107,6 +99,15 @@ html{
     font-style: normal;
 }
 
+/*Imagen*/
+
+.img1{
+    width: 21%;
+    height: auto;
+    padding: 15%;
+}
+
+/*Textos condicionales de acuerdo a si hay texto en input*/
 #texto1{
     color: #F5EEE6;
     padding-left: 20%;
@@ -120,6 +121,3 @@ html{
 }
 
 
-.area3 h2{
-   margin-left: 15%;
-} 
