--- a/style.css
+++ b/style.css
@@ -28,6 +28,14 @@ body{
     height: 100%;
 }
 
+.copyright{
+    text-align: center;
+    color:#FFFFFF;
+    font-size: 13px;
+    padding-top: 20%;
+    margin:20px;
+}
+
 .area3{
     display: flex;
     flex-direction: column;
