--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body{
 }
 
 .copyright{
+    position: relative;
     text-align: center;
     color:#FFFFFF;
     font-size: 13px;
@@ -59,6 +60,7 @@ body{
     width: 90%;
     height: 350px;
     margin-left: 4%;
+    margin-top: 9%;
     text-align:left;
     border: none;
     background-color: #9F70FD;
@@ -74,6 +76,7 @@ body{
     margin-left: 4%;
     padding-top: 8%;
     padding-bottom: 0%;
+
   }
 
 /*Botones*/
@@ -196,5 +199,9 @@ body{
         margin-left: 22%;
     }
 
-  
+  .copyright{
+    display: none;
+  }
+
+
 }
